<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2014 The Android Open Source Project
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at
     http://www.apache.org/licenses/LICENSE-2.0
 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <it.unipd.dei.esp1617.patova.hdresp.AutoFitTextureView
        android:id="@+id/texture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />

    <FrameLayout
        android:id="@+id/control"
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/transparent">

        <ImageButton
            android:id="@+id/gallery"
            style="@style/ButtonsTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/gallery"
            android:src="@mipmap/ic_gallery"
            android:tint="@color/iconOnCameraColor"/>

        <ImageButton
            android:id="@+id/picture"
            style="@style/ButtonsTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/picture"
            android:src="@drawable/ic_camera_shutter"
            android:tint="@color/iconOnCameraColor" />

        <ImageButton
            android:id="@+id/settings"
            style="@style/ButtonsTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/settings_info"
            android:src="@drawable/ic_settings"
            android:tint="@color/iconOnCameraColor" />

    </FrameLayout>

</RelativeLayout>